# PdfAnnotationExtractor

./: .gitignore  CHANGELOG.md  Kaupert2024.md  Kaupert2024_debug.txt  MANIFEST.in  README.md  babel.cfg  compile_translations.py  gui.py  main.py  net.karahan.PDFAnnotationExtractor.yml  pdf-annotation-extractor.sh  pdf-annotation-extractor_0.0.2~alpha_all.deb  pdf_utils.py  pyproject.toml  python3-dependencies.json  python3-requirements-simple.json  python3-requirements.json  requirements-simple.txt  requirements.txt  setup.cfg  setup.py
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/x86_64-com.enginkarahan.PdfAnnotationExtractor.yml/: build-pdf-annotation-extractor  build-python-deps  cleanup  finish  init
.flatpak-builder/cache/refs/heads/x86_64-net.karahan.PDFAnnotationExtractor.yml/: build-pdf-annotation-extractor  build-python3-dependencies  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-com.enginkarahan.PdfAnnotationExtractor.yml  x86_64-net.karahan.PDFAnnotationExtractor.yml
.github/: FUNDING.yml
.github/workflows/: build-windows-exe.yml
build-aux/flatpak/: com.enginkarahan.PdfAnnotationExtractor.yml  requirements.txt
locale/de/LC_MESSAGES/: base.mo  messages.po
locale/en/LC_MESSAGES/: messages.mo
src/pdf_annotation_extractor/: gui.py  main.py  pdf_utils.py  translations.py
src/pdf_annotation_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pdf_annotation_extractor/locale/: messages.pot
src/pdf_annotation_extractor/locale/de/LC_MESSAGES/: base.po  messages.mo  messages.po
(+6 files in other folders)
