[metadata]
name = pdf-annotation-extractor
version = 0.0.1
description = PDF Annotation Extractor (Tk-Oberfläche)
long_description = file: README.md
long_description_content_type = text/markdown
author = Engin Karahan
license = GPL-3.0-or-later
license_files = LICENSE
url = https://github.com/EnginKarahan/PdfAnnotationExtractor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
install_requires =
    pymupdf>=1.20
    babel>=2.14
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pdf-annotation-extractor = pdf_annotation_extractor.main:main

[bdist_wheel]
universal = 0